--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,8 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>tf2_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
+  <build_depend>laser_geometry</build_depend>
+  <build_depend>sensor_msgs</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_lifecycle</exec_depend>
@@ -24,6 +26,8 @@
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf2_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>laser_geometry</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
