fixed some bugs in launch files and changed cmakelist to install Rviz config folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,5 +110,11 @@ install(DIRECTORY
   param
   DESTINATION share/${PROJECT_NAME}/
 )
+# install the RVIZ directory
+install(DIRECTORY
+  rviz
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 
 ament_package()
