--- a/param/ergoCub_amcl_nav2.yaml
+++ b/param/ergoCub_amcl_nav2.yaml
@@ -6,7 +6,7 @@ amcl:
     alpha3: 0.2
     alpha4: 0.2
     alpha5: 0.2
-    base_frame_id: "footprint"
+    base_frame_id: "projection"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
@@ -37,7 +37,7 @@ amcl:
     z_max: 0.05
     z_rand: 0.5
     z_short: 0.05
-    scan_topic: filtered_scan
+    scan_topic: scan     #filtered_scan
 
 amcl_map_client:
   ros__parameters:
