--- a/param/ergoCub_amcl_nav2.yaml
+++ b/param/ergoCub_amcl_nav2.yaml
@@ -14,7 +14,7 @@ amcl:
     global_frame_id: "map"
     lambda_short: 0.1
     laser_likelihood_max_dist: 2.0
-    laser_max_range: 25.0
+    laser_max_range: 24.0
     laser_min_range: 0.2
     laser_model_type: "likelihood_field"
     max_beams: 60
@@ -38,6 +38,8 @@ amcl:
     z_rand: 0.5
     z_short: 0.05
     scan_topic: scan     #filtered_scan
+    set_initial_pose: true
+    initial_pose: {x: 0.0, y: 0.0, z: 0.0, yaw: 0.0}
 
 amcl_map_client:
   ros__parameters:
