--- a/param/ergoCub_amcl_nav2.yaml
+++ b/param/ergoCub_amcl_nav2.yaml
@@ -41,3 +41,11 @@ amcl:
     map_topic: map
     set_initial_pose: true
     initial_pose: {x: 0.0, y: 0.0, z: 0.0, yaw: 0.0}
+
+amcl_rclcpp_node:
+  ros__parameters:
+    use_sim_time: True
+
+amcl_map_client:
+  ros__parameters:
+    use_sim_time: True
