--- a/param/ergoCub_nav2.yaml
+++ b/param/ergoCub_nav2.yaml
@@ -1,8 +1,8 @@
 bt_navigator:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: True
     global_frame: map
-    robot_base_frame: footprint   #base_link
+    robot_base_frame: projection   #base_link
     odom_topic: /odom
     default_bt_xml_filename: "navigate_w_replanning_and_recovery.xml"
     bt_loop_duration: 10
@@ -45,149 +45,167 @@ bt_navigator:
 
 bt_navigator_rclcpp_node:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: True
 
-controller_server:
+bt_navigator_navigate_through_poses_rclcpp_node:
   ros__parameters:
-    use_sim_time: true
-    controller_plugins: ["FollowPath"]
+    use_sim_time: True
 
-    FollowPath:
-      plugin: "ergoCub_trajectory_controller::ErgoCubTrajectoryController"
-      #debug_trajectory_details: True
-      desired_linear_vel: 0.2
-      lookahead_dist: 0.4
-      max_angular_vel: 1.0
-      transform_tolerance: 1.0
+bt_navigator_navigate_to_pose_rclcpp_node:
+  ros__parameters:
+    use_sim_time: True
 
 #controller_server:
 #  ros__parameters:
 #    use_sim_time: true
-#    controller_frequency: 20.0
-#    min_x_velocity_threshold: 0.001
-#    min_y_velocity_threshold: 0.5
-#    min_theta_velocity_threshold: 0.001
-#    failure_tolerance: 0.3
-#    progress_checker_plugin: "progress_checker"
-#    goal_checker_plugins: ["general_goal_checker"] 
 #    controller_plugins: ["FollowPath"]
 #
-#    # Progress checker parameters
-#    progress_checker:
-#      plugin: "nav2_controller::SimpleProgressChecker"
-#      required_movement_radius: 0.5
-#      movement_time_allowance: 10.0
-#    
-#    general_goal_checker:
-#      stateful: True
-#      plugin: "nav2_controller::SimpleGoalChecker"
-#      xy_goal_tolerance: 0.25
-#      yaw_goal_tolerance: 0.25
-#
-#    # DWB parameters
 #    FollowPath:
-#      plugin: "dwb_core::DWBLocalPlanner"
-#      debug_trajectory_details: True
-#      min_vel_x: 0.0
-#      min_vel_y: 0.0
-#      max_vel_x: 0.22
-#      max_vel_y: 0.0
-#      max_vel_theta: 1.0
-#      min_speed_xy: 0.0
-#      max_speed_xy: 0.22
-#      min_speed_theta: 0.0
-#      # Add high threshold velocity for turtlebot 3 issue.
-#      # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-#      acc_lim_x: 2.5
-#      acc_lim_y: 0.0
-#      acc_lim_theta: 3.2
-#      decel_lim_x: -2.5
-#      decel_lim_y: 0.0
-#      decel_lim_theta: -3.2
-#      vx_samples: 20
-#      vy_samples: 5
-#      vtheta_samples: 20
-#      sim_time: 5.0   #1.7
-#      linear_granularity: 0.01    #0.05
-#      angular_granularity: 0.01  #0.025
-#      transform_tolerance: 0.2
-#      xy_goal_tolerance: 0.25
-#      trans_stopped_velocity: 0.25
-#      short_circuit_trajectory_evaluation: True
-#      stateful: True
-#      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-#      BaseObstacle.scale: 0.02
-#      PathAlign.scale: 32.0
-#      PathAlign.forward_point_distance: 0.1
-#      GoalAlign.scale: 24.0
-#      GoalAlign.forward_point_distance: 0.1
-#      PathDist.scale: 32.0
-#      GoalDist.scale: 24.0
-#      RotateToGoal.scale: 32.0
-#      RotateToGoal.slowing_factor: 5.0
-#      RotateToGoal.lookahead_time: -1.0
-      
+#      plugin: "ergoCub_trajectory_controller::ErgoCubTrajectoryController"
+#      #debug_trajectory_details: True
+#      desired_linear_vel: 0.2
+#      lookahead_dist: 0.4
+#      max_angular_vel: 1.0
+#      transform_tolerance: 1.0
+
+controller_server:
+  ros__parameters:
+    use_sim_time: True
+    controller_frequency: 20.0
+    min_x_velocity_threshold: 0.001
+    min_y_velocity_threshold: 0.5
+    min_theta_velocity_threshold: 0.001
+    failure_tolerance: 0.3
+    progress_checker_plugin: "progress_checker"
+    goal_checker_plugins: ["general_goal_checker"] 
+    controller_plugins: ["FollowPath"]
+
+    # Progress checker parameters
+    progress_checker:
+      plugin: "nav2_controller::SimpleProgressChecker"
+      required_movement_radius: 0.5
+      movement_time_allowance: 10.0
+    
+    general_goal_checker:
+      stateful: True
+      plugin: "nav2_controller::SimpleGoalChecker"
+      xy_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.25
+
+    # DWB parameters
+    FollowPath:
+      plugin: "dwb_core::DWBLocalPlanner"
+      debug_trajectory_details: True
+      min_vel_x: 0.0
+      min_vel_y: 0.0
+      max_vel_x: 0.22
+      max_vel_y: 0.0
+      max_vel_theta: 1.0
+      min_speed_xy: 0.0
+      max_speed_xy: 0.22
+      min_speed_theta: 0.0
+      # Add high threshold velocity for turtlebot 3 issue.
+      # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
+      acc_lim_x: 2.5
+      acc_lim_y: 0.0
+      acc_lim_theta: 3.2
+      decel_lim_x: -2.5
+      decel_lim_y: 0.0
+      decel_lim_theta: -3.2
+      vx_samples: 20
+      vy_samples: 5
+      vtheta_samples: 20
+      sim_time: 5.0   #1.7
+      linear_granularity: 0.01    #0.05
+      angular_granularity: 0.01  #0.025
+      transform_tolerance: 0.2
+      xy_goal_tolerance: 0.25
+      trans_stopped_velocity: 0.25
+      short_circuit_trajectory_evaluation: True
+      stateful: True
+      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      BaseObstacle.scale: 0.02
+      PathAlign.scale: 32.0
+      PathAlign.forward_point_distance: 0.1
+      GoalAlign.scale: 24.0
+      GoalAlign.forward_point_distance: 0.1
+      PathDist.scale: 32.0
+      GoalDist.scale: 24.0
+      RotateToGoal.scale: 32.0
+      RotateToGoal.slowing_factor: 5.0
+      RotateToGoal.lookahead_time: -1.0
+     
 controller_server_rclcpp_node:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: True
 
 local_costmap:
   local_costmap:
+    #ros__parameters:
+    #  update_frequency: 5.0
+    #  publish_frequency: 5.0  #2.0
+    #  global_frame: odom
+    #  robot_base_frame: projection
+    #  use_sim_time: true
+    #  rolling_window: true
+    #  width: 3
+    #  height: 3
+    #  resolution: 0.05
+    #  robot_radius: 0.5
+    #  plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
+    #  inflation_layer:
+    #    plugin: "nav2_costmap_2d::InflationLayer"
+    #    cost_scaling_factor: 1.0
+    #    inflation_radius: 0.55
+    #  obstacle_layer:
+    #    plugin: "nav2_costmap_2d::ObstacleLayer"
+    #    enabled: True
+    #    observation_sources: scan
+    #    scan:
+    #      topic: /scan
+    #      max_obstacle_height: 2.0
+    #      clearing: True
+    #      marking: True
+    #      data_type: "LaserScan"
+    #  voxel_layer:
+    #    plugin: "nav2_costmap_2d::VoxelLayer"
+    #    enabled: True
+    #    publish_voxel_map: True
+    #    origin_z: 0.0
+    #    z_resolution: 0.05
+    #    z_voxels: 16
+    #    max_obstacle_height: 2.0
+    #    mark_threshold: 0
+    #    observation_sources: scan
+    #    scan:
+    #      topic: /scan
+    #      max_obstacle_height: 2.0
+    #      clearing: True
+    #      marking: True
+    #      data_type: "LaserScan"
+    #      raytrace_max_range: 5.0
+    #      raytrace_min_range: 0.0
+    #      obstacle_max_range: 3.5
+    #      obstacle_min_range: 0.0
+    #  static_layer:
+    #    map_subscribe_transient_local: True
+    #  always_send_full_costmap: True
     ros__parameters:
       update_frequency: 5.0
       publish_frequency: 2.0
       global_frame: odom
       robot_base_frame: projection
-      use_sim_time: true
+      use_sim_time: True
       rolling_window: true
       width: 3
       height: 3
       resolution: 0.05
-      robot_radius: 0.5
-      plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 1.0
-        inflation_radius: 0.55
-      obstacle_layer:
-        plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: True
-        observation_sources: scan
-        scan:
-          topic: /scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.05
-        z_voxels: 16
-        max_obstacle_height: 2.0
-        mark_threshold: 0
-        observation_sources: scan
-        scan:
-          topic: /scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-          raytrace_max_range: 5.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 3.5
-          obstacle_min_range: 0.0
-      static_layer:
-        map_subscribe_transient_local: True
-      always_send_full_costmap: True
   local_costmap_client:
     ros__parameters:
-      use_sim_time: true
+      use_sim_time: True
   local_costmap_rclcpp_node:
     ros__parameters:
-      use_sim_time: true
+      use_sim_time: True
 
 global_costmap:
   global_costmap:
@@ -196,7 +214,7 @@ global_costmap:
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: projection
-      use_sim_time: true
+      use_sim_time: True
       robot_radius: 0.1
       resolution: 0.05
       track_unknown_space: true
@@ -207,17 +225,17 @@ global_costmap:
         observation_sources: scan
         scan:
           topic: /scan
-          max_obstacle_height: 2.0
+          max_obstacle_height: 2.5  #2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 5.0
+          raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 3.5
+          obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: True
+        enabled: false
         publish_voxel_map: True
         origin_z: 0.0
         z_resolution: 0.05
@@ -252,7 +270,7 @@ global_costmap:
 
 map_server:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: True
     yaml_filename: "map.yaml"
 
 map_saver:
@@ -299,7 +317,7 @@ planner_server:
 
 planner_server_rclcpp_node:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: True
 
 recoveries_server:
   ros__parameters:
@@ -316,7 +334,7 @@ recoveries_server:
     global_frame: odom
     robot_base_frame: projection
     transform_timeout: 0.1
-    use_sim_time: true
+    use_sim_time: True
     simulate_ahead_time: 2.0
     max_rotational_vel: 1.0
     min_rotational_vel: 0.4
@@ -324,10 +342,11 @@ recoveries_server:
 
 robot_state_publisher:
   ros__parameters:
-    use_sim_time: true
+    use_sim_time: True
 
 waypoint_follower:
   ros__parameters:
+    use_sim_time: True
     loop_rate: 2000
     stop_on_failure: false
     waypoint_task_executor_plugin: "wait_at_waypoint"   
@@ -335,3 +354,36 @@ waypoint_follower:
       plugin: "nav2_waypoint_follower::WaitAtWaypoint"
       enabled: True
       waypoint_pause_duration: 200
+
+smoother_server:
+  ros__parameters:
+    use_sim_time: True
+    smoother_plugins: ["simple_smoother"]
+    simple_smoother:
+      plugin: "nav2_smoother::SimpleSmoother"
+      tolerance: 1.0e-10
+      max_its: 1000
+      do_refinement: True
+
+behavior_server:
+  ros__parameters:
+    costmap_topic: local_costmap/costmap_raw
+    footprint_topic: local_costmap/published_footprint
+    cycle_frequency: 10.0
+    behavior_plugins: ["spin", "backup", "drive_on_heading", "wait"]
+    spin:
+      plugin: "nav2_behaviors/Spin"
+    backup:
+      plugin: "nav2_behaviors/BackUp"
+    drive_on_heading:
+      plugin: "nav2_behaviors/DriveOnHeading"
+    wait:
+      plugin: "nav2_behaviors/Wait"
+    global_frame: odom
+    robot_base_frame: base_link
+    transform_tolerance: 0.1
+    use_sim_time: true
+    simulate_ahead_time: 2.0
+    max_rotational_vel: 1.0
+    min_rotational_vel: 0.4
+    rotational_acc_lim: 3.2
