--- a/param/ergoCub_nav2.yaml
+++ b/param/ergoCub_nav2.yaml
@@ -117,23 +117,24 @@ controller_server:
       vtheta_samples: 20
       sim_time: 5.0   #1.7
       linear_granularity: 0.01    #0.05
-      angular_granularity: 0.01  #0.025
+      angular_granularity: 0.02  #0.025
       transform_tolerance: 0.2
       xy_goal_tolerance: 0.25
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-      BaseObstacle.scale: 0.02
+      #critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      critics: ["PathAlign", "PathDist"]
+      #BaseObstacle.scale: 0.02
       PathAlign.scale: 32.0
-      PathAlign.forward_point_distance: 0.1
-      GoalAlign.scale: 24.0
-      GoalAlign.forward_point_distance: 0.1
+      PathAlign.forward_point_distance: 0.05  #0.1
+      #GoalAlign.scale: 24.0
+      #GoalAlign.forward_point_distance: 0.1
       PathDist.scale: 32.0
-      GoalDist.scale: 24.0
-      RotateToGoal.scale: 32.0
-      RotateToGoal.slowing_factor: 5.0
-      RotateToGoal.lookahead_time: -1.0
+      #GoalDist.scale: 24.0
+      #RotateToGoal.scale: 32.0
+      #RotateToGoal.slowing_factor: 5.0
+      #RotateToGoal.lookahead_time: -1.0
      
 controller_server_rclcpp_node:
   ros__parameters:
