--- a/param/ergoCub_amcl_nav2.yaml
+++ b/param/ergoCub_amcl_nav2.yaml
@@ -1,7 +1,7 @@
 amcl:
   ros__parameters:
     use_sim_time: true
-    alpha1: 0.3
+    alpha1: 0.05  #0.3
     alpha2: 0.05
     alpha3: 0.05
     alpha4: 0.05
@@ -14,7 +14,7 @@ amcl:
     global_frame_id: "map"
     lambda_short: 0.1
     laser_likelihood_max_dist: 4.0  #2
-    laser_max_range: 24.0
+    laser_max_range: 25.0
     laser_min_range: 0.2
     laser_model_type: "likelihood_field"
     max_beams: 360
@@ -28,14 +28,14 @@ amcl:
     resample_interval: 2
     robot_model_type: "nav2_amcl::OmniMotionModel"
     save_pose_rate: 0.5
-    sigma_hit: 0.2
+    sigma_hit: 0.1    #0.2
     tf_broadcast: true
-    transform_tolerance: 0.3
+    transform_tolerance: 1.0  #0.3
     update_min_a: 0.5 #0.2
     update_min_d: 0.2 #0.25  
     z_hit: 0.9
     z_max: 0.05
-    z_rand: 0.05
+    z_rand: 0.5   #0.05
     z_short: 0.1
     scan_topic: filtered_scan     #filtered_scan
     map_topic: map
