--- a/param/ergoCub_nav2.yaml
+++ b/param/ergoCub_nav2.yaml
@@ -71,11 +71,11 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 20.0
+    controller_frequency: 5.0    #20.0
     min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.001
     min_theta_velocity_threshold: 0.001
-    failure_tolerance: 0.3
+    failure_tolerance: 0.5
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["general_goal_checker"] 
     controller_plugins: ["FollowPath"]
@@ -96,14 +96,14 @@ controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.0
-      min_vel_y: 0.0
+      min_vel_x: -0.2
+      min_vel_y: -0.2
       max_vel_x: 0.2
       max_vel_y: 0.42
-      max_vel_theta: 0.0  #1.0
-      min_speed_xy: 0.0
+      max_vel_theta: 0.1  #1.0
+      min_speed_xy: -0.2
       max_speed_xy: 0.4
-      min_speed_theta: 0.0
+      min_speed_theta: -0.1
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
       acc_lim_x: 2.5
@@ -111,14 +111,14 @@ controller_server:
       acc_lim_theta: 0.0 #3.2
       decel_lim_x: -2.5
       decel_lim_y: -2.5
-      decel_lim_theta: 0.0 #-3.2
+      decel_lim_theta: -0.1 #-3.2
       vx_samples: 20
       vy_samples: 10
-      vtheta_samples: 5  #20
+      vtheta_samples: 15  #20
       sim_time: 5.0   #1.7
-      linear_granularity: 0.01    #0.05
-      angular_granularity: 0.02  #0.025
-      transform_tolerance: 0.2
+      linear_granularity: 0.05    #0.05
+      angular_granularity: 0.2  #0.025
+      transform_tolerance: 0.5  #0.2
       xy_goal_tolerance: 0.5
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
@@ -286,6 +286,7 @@ planner_server:
   ros__parameters:
     planner_plugins: ['GridBased']
     use_sim_time: True
+    expected_planner_frequency: 1.0   #20.0
     GridBased:
       plugin: 'nav2_navfn_planner/NavfnPlanner'
       use_astar: True
