--- a/param/ergoCub_nav2.yaml
+++ b/param/ergoCub_nav2.yaml
@@ -55,19 +55,6 @@ bt_navigator_navigate_to_pose_rclcpp_node:
   ros__parameters:
     use_sim_time: True
 
-#controller_server:
-#  ros__parameters:
-#    use_sim_time: true
-#    controller_plugins: ["FollowPath"]
-#
-#    FollowPath:
-#      plugin: "ergoCub_trajectory_controller::ErgoCubTrajectoryController"
-#      #debug_trajectory_details: True
-#      desired_linear_vel: 0.2
-#      lookahead_dist: 0.4
-#      max_angular_vel: 1.0
-#      transform_tolerance: 1.0
-
 controller_server:
   ros__parameters:
     use_sim_time: True
@@ -142,55 +129,6 @@ controller_server_rclcpp_node:
 
 local_costmap:
   local_costmap:
-    #ros__parameters:
-    #  update_frequency: 5.0
-    #  publish_frequency: 5.0  #2.0
-    #  global_frame: odom
-    #  robot_base_frame: projection
-    #  use_sim_time: true
-    #  rolling_window: true
-    #  width: 3
-    #  height: 3
-    #  resolution: 0.05
-    #  robot_radius: 0.5
-    #  plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
-    #  inflation_layer:
-    #    plugin: "nav2_costmap_2d::InflationLayer"
-    #    cost_scaling_factor: 1.0
-    #    inflation_radius: 0.55
-    #  obstacle_layer:
-    #    plugin: "nav2_costmap_2d::ObstacleLayer"
-    #    enabled: True
-    #    observation_sources: scan
-    #    scan:
-    #      topic: /scan
-    #      max_obstacle_height: 2.0
-    #      clearing: True
-    #      marking: True
-    #      data_type: "LaserScan"
-    #  voxel_layer:
-    #    plugin: "nav2_costmap_2d::VoxelLayer"
-    #    enabled: True
-    #    publish_voxel_map: True
-    #    origin_z: 0.0
-    #    z_resolution: 0.05
-    #    z_voxels: 16
-    #    max_obstacle_height: 2.0
-    #    mark_threshold: 0
-    #    observation_sources: scan
-    #    scan:
-    #      topic: /scan
-    #      max_obstacle_height: 2.0
-    #      clearing: True
-    #      marking: True
-    #      data_type: "LaserScan"
-    #      raytrace_max_range: 5.0
-    #      raytrace_min_range: 0.0
-    #      obstacle_max_range: 3.5
-    #      obstacle_min_range: 0.0
-    #  static_layer:
-    #    map_subscribe_transient_local: True
-    #  always_send_full_costmap: True
     ros__parameters:
       update_frequency: 5.0
       publish_frequency: 2.0
@@ -198,9 +136,65 @@ local_costmap:
       robot_base_frame: virtual_unicycle_base #projection
       use_sim_time: True
       rolling_window: true
-      width: 3
-      height: 3
+      width: 6    #3
+      height: 6   #3
       resolution: 0.05
+      robot_radius: 0.4
+      always_send_full_costmap: true
+      plugins:
+      - obstacle_layer
+      - voxel_layer
+      - inflation_layer
+      inflation_layer:
+        plugin: nav2_costmap_2d::InflationLayer
+        enabled: true
+        inflation_radius: 1.0
+        cost_scaling_factor: 2.5
+        inflate_unknown: false
+        inflate_around_unknown: true
+      obstacle_layer:
+        plugin: nav2_costmap_2d::ObstacleLayer
+        enabled: true
+        observation_sources: scan
+        footprint_clearing_enabled: true
+        max_obstacle_height: 2.0
+        combination_method: 1
+        scan:
+          topic: /filtered_scan
+          obstacle_max_range: 6.0
+          obstacle_min_range: 0.1
+          raytrace_max_range: 20.0
+          raytrace_min_range: 0.0
+          max_obstacle_height: 2.0
+          min_obstacle_height: 0.05
+          clearing: true
+          marking: true
+          data_type: "LaserScan"
+          inf_is_valid: false
+      voxel_layer:
+        plugin: nav2_costmap_2d::VoxelLayer
+        enabled: true
+        footprint_clearing_enabled: true
+        max_obstacle_height: 2.0
+        publish_voxel_map: true
+        origin_z: 0.0
+        z_resolution: 0.2
+        z_voxels: 8
+        unknown_threshold: 15
+        mark_threshold: 2
+        observation_sources: pointcloud
+        combination_method: 1
+        pointcloud:  # no frame set, uses frame from message
+          topic: /camera_rgbd/depth/color/points
+          max_obstacle_height: 2.0
+          min_obstacle_height: 0.05
+          obstacle_max_range: 6.0
+          obstacle_min_range: 0.5   #can see the robots hands
+          raytrace_max_range: 4.0
+          raytrace_min_range: 0.0
+          clearing: true
+          marking: true
+          data_type: "PointCloud2"
   local_costmap_client:
     ros__parameters:
       use_sim_time: True
