--- a/param/ergoCub_nav2.yaml
+++ b/param/ergoCub_nav2.yaml
@@ -65,13 +65,14 @@ controller_server:
     failure_tolerance: 0.5
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["general_goal_checker"] 
+    controller_plugin_types: ["teb_local_planner::TebLocalPlannerROS"]  #only for TEB
     controller_plugins: ["FollowPath"]
 
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
-      movement_time_allowance: 10.0
+      movement_time_allowance: 20.0
     
     general_goal_checker:
       stateful: True
@@ -79,49 +80,152 @@ controller_server:
       xy_goal_tolerance: 0.5
       yaw_goal_tolerance: 6.28  #0.5 -> don't care about theta atm
 
-    # DWB parameters
+    #TEB
     FollowPath:
-      plugin: "dwb_core::DWBLocalPlanner"
-      debug_trajectory_details: True
-      min_vel_x: -0.2
-      min_vel_y: -0.2
-      max_vel_x: 0.2
-      max_vel_y: 0.42
-      max_vel_theta: 0.1  #1.0
-      min_speed_xy: -0.2
-      max_speed_xy: 0.4
-      min_speed_theta: -0.1
-      # Add high threshold velocity for turtlebot 3 issue.
-      # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
+      plugin: teb_local_planner::TebLocalPlannerROS
+
+      teb_autosize: 1.0
+      dt_ref: 0.3
+      dt_hysteresis: 0.1
+      max_samples: 500
+      global_plan_overwrite_orientation: False
+      allow_init_with_backwards_motion: False
+      max_global_plan_lookahead_dist: 3.0
+      global_plan_viapoint_sep: 0.3
+      global_plan_prune_distance: 1.0
+      exact_arc_length: False
+      feasibility_check_no_poses: 2
+      publish_feedback: False
+          
+      # Robot
+              
+      max_vel_x: 0.26
+      max_vel_theta: 1.0 
       acc_lim_x: 2.5
-      acc_lim_y: 2.5
-      acc_lim_theta: 0.0 #3.2
-      decel_lim_x: -2.5
-      decel_lim_y: -2.5
-      decel_lim_theta: -0.1 #-3.2
-      vx_samples: 20
-      vy_samples: 10
-      vtheta_samples: 15  #20
-      sim_time: 5.0   #1.7
-      linear_granularity: 0.05    #0.05
-      angular_granularity: 0.2  #0.025
-      transform_tolerance: 0.5  #0.2
-      xy_goal_tolerance: 0.5
-      trans_stopped_velocity: 0.25
-      short_circuit_trajectory_evaluation: True
-      stateful: True
-      #critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-      critics: ["PathDist"]
-      #BaseObstacle.scale: 0.02
-      #PathAlign.scale: 32.0
-      #PathAlign.forward_point_distance: 0.05  #0.1
-      #GoalAlign.scale: 24.0
-      #GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 32.0
-      #GoalDist.scale: 24.0
-      #RotateToGoal.scale: 32.0
-      #RotateToGoal.slowing_factor: 5.0
-      #RotateToGoal.lookahead_time: -1.0
+      acc_lim_theta: 3.2
+
+      footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+        type: "circular"
+        radius: 0.4 # for type "circular"
+
+      # GoalTolerance
+              
+      free_goal_vel: False
+          
+      # Obstacles
+          
+      min_obstacle_dist: 0.27
+      inflation_dist: 0.6
+      include_costmap_obstacles: True
+      costmap_obstacles_behind_robot_dist: 1.0
+      obstacle_poses_affected: 15
+
+      dynamic_obstacle_inflation_dist: 0.6
+      include_dynamic_obstacles: True 
+
+      costmap_converter_plugin: "costmap_converter::CostmapToPolygonsDBSMCCH"
+      costmap_converter_spin_thread: True
+      costmap_converter_rate: 5
+
+      # Optimization
+          
+      no_inner_iterations: 5
+      no_outer_iterations: 4
+      optimization_activate: True
+      optimization_verbose: False
+      penalty_epsilon: 0.1
+      obstacle_cost_exponent: 4.0
+      weight_max_vel_x: 0.5
+      weight_max_vel_theta: 0.5
+      weight_acc_lim_x: 0.5
+      weight_acc_lim_theta: 10.5
+      weight_kinematics_nh: 1000.0
+      weight_kinematics_forward_drive: 3.0
+      weight_kinematics_turning_radius: 1.0
+      weight_optimaltime: 1.0 # must be > 0
+      weight_shortest_path: 0.0
+      weight_obstacle: 100.0
+      weight_inflation: 0.2
+      weight_dynamic_obstacle: 10.0 # not in use yet
+      weight_dynamic_obstacle_inflation: 0.2
+      weight_viapoint: 50.0
+      weight_adapt_factor: 2.0
+
+      # Homotopy Class Planner
+
+      enable_homotopy_class_planning: True
+      enable_multithreading: True
+      max_number_classes: 4
+      selection_cost_hysteresis: 5.0
+      selection_prefer_initial_plan: 1.0
+      selection_obst_cost_scale: 1.0
+      selection_alternative_time_cost: True
+
+      roadmap_graph_no_samples: 15
+      roadmap_graph_area_width: 5.0
+      roadmap_graph_area_length_scale: 1.0
+      h_signature_prescaler: 0.5
+      h_signature_threshold: 0.1
+      obstacle_heading_threshold: 0.45
+      switching_blocking_period: 0.0
+      viapoints_all_candidates: True
+      delete_detours_backwards: True
+      max_ratio_detours_duration_best_duration: 3.0
+      visualize_hc_graph: False
+      visualize_with_time_as_z_axis_scale: 0.0
+
+      # Recovery
+      
+      shrink_horizon_backup: True
+      shrink_horizon_min_duration: 10.0
+      oscillation_recovery: True
+      oscillation_v_eps: 0.1
+      oscillation_omega_eps: 0.1
+      oscillation_recovery_min_duration: 10.0
+      oscillation_filter_duration: 10.0
+    # DWB parameters
+    #FollowPath:
+    #  plugin: "dwb_core::DWBLocalPlanner"
+    #  debug_trajectory_details: True
+    #  min_vel_x: -0.2
+    #  min_vel_y: -0.2
+    #  max_vel_x: 0.2
+    #  max_vel_y: 0.42
+    #  max_vel_theta: 0.1  #1.0
+    #  min_speed_xy: -0.2
+    #  max_speed_xy: 0.4
+    #  min_speed_theta: -0.1
+    #  # Add high threshold velocity for turtlebot 3 issue.
+    #  # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
+    #  acc_lim_x: 2.5
+    #  acc_lim_y: 2.5
+    #  acc_lim_theta: 0.0 #3.2
+    #  decel_lim_x: -2.5
+    #  decel_lim_y: -2.5
+    #  decel_lim_theta: -0.1 #-3.2
+    #  vx_samples: 20
+    #  vy_samples: 10
+    #  vtheta_samples: 15  #20
+    #  sim_time: 5.0   #1.7
+    #  linear_granularity: 0.05    #0.05
+    #  angular_granularity: 0.2  #0.025
+    #  transform_tolerance: 0.5  #0.2
+    #  xy_goal_tolerance: 0.5
+    #  trans_stopped_velocity: 0.25
+    #  short_circuit_trajectory_evaluation: True
+    #  stateful: True
+    #  #critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+    #  critics: ["PathDist"]
+    #  #BaseObstacle.scale: 0.02
+    #  #PathAlign.scale: 32.0
+    #  #PathAlign.forward_point_distance: 0.05  #0.1
+    #  #GoalAlign.scale: 24.0
+    #  #GoalAlign.forward_point_distance: 0.1
+    #  PathDist.scale: 32.0
+    #  #GoalDist.scale: 24.0
+    #  #RotateToGoal.scale: 32.0
+    #  #RotateToGoal.slowing_factor: 5.0
+    #  #RotateToGoal.lookahead_time: -1.0
      
 controller_server_rclcpp_node:
   ros__parameters:
@@ -160,13 +264,13 @@ local_costmap:
         max_obstacle_height: 2.0
         combination_method: 1
         scan:
-          topic: /filtered_scan
-          obstacle_max_range: 6.0
+          topic: /filtered_scan_compensated
+          obstacle_max_range: 10.0
           obstacle_min_range: 0.1
-          raytrace_max_range: 20.0
+          raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          max_obstacle_height: 2.0
-          min_obstacle_height: 0.05
+          max_obstacle_height: 3.0
+          min_obstacle_height: -1.0
           clearing: true
           marking: true
           data_type: "LaserScan"
@@ -210,7 +314,7 @@ global_costmap:
       global_frame: map
       robot_base_frame: virtual_unicycle_base #projection
       use_sim_time: True
-      robot_radius: 0.1
+      robot_radius: 0.4
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "voxel_layer", "inflation_layer"]
@@ -219,15 +323,32 @@ global_costmap:
         enabled: True
         observation_sources: scan
         scan:
-          topic: filtered_scan_compensated #/filtered_scan   #scan
+          topic: /filtered_scan_compensated 
           max_obstacle_height: 2.5  #2.0
+          min_obstacle_height: -1.0
           clearing: True
           marking: True
           data_type: "LaserScan"
           raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 2.5
+          obstacle_max_range: 6.0
           obstacle_min_range: 0.0
+      #obstacle_layer:
+      #  plugin: "nav2_costmap_2d::ObstacleLayer"
+      #  enabled: True
+      #  footprint_clearing_enabled: true
+      #  observation_sources: pointcloud
+      #  pointcloud:
+      #    topic: /camera_rgbd/depth/points #/filtered_scan   #scan
+      #    max_obstacle_height: 2.0
+      #    min_obstacle_height: 0.1
+      #    clearing: True
+      #    marking: True
+      #    data_type: "PointCloud2"
+      #    obstacle_max_range: 6.0
+      #    obstacle_min_range: 0.5   #can see the robots hands
+      #    raytrace_max_range: 6.0
+      #    raytrace_min_range: 0.0
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: false
@@ -237,13 +358,13 @@ global_costmap:
         z_voxels: 16
         max_obstacle_height: 2.0
         mark_threshold: 0
-        observation_sources: scan
+        observation_sources: pointcloud
         scan:
-          topic: filtered_scan_compensated #/filtered_scan   #scan
-          max_obstacle_height: 2.0
+          topic: /camera_rgbd/depth/points #/filtered_scan   #scan
+          max_obstacle_height: 3.0
           clearing: True
           marking: True
-          data_type: "LaserScan"
+          data_type: "PointCloud2"
           raytrace_max_range: 5.0
           raytrace_min_range: 0.0
           obstacle_max_range: 3.5
@@ -251,10 +372,15 @@ global_costmap:
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
+        enabled: true
+        subscribe_to_updates: true
+        transform_tolerance: 0.1
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
+        inflate_unknown: false
+        inflate_around_unknown: true
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
